# bncsutil

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  cmake.toml  vcpkg.json
.github/workflows/: build.yml  cmkr.yml  release.yml  release_assets.yml
cmake/: bundle.cmake  cmkr.cmake  generate.cmake  install.cmake  libinfo.h.in  module.cmake.in  mpir.cmake
include/bncsutil/: debug.h  mutil.h
src/: bsha1.cpp  cdkeydecoder.cpp  checkrevision.cpp  debug.c  decodekey.cpp  file.cpp  nls.c  oldauth.cpp
test/: main.cpp
tests/: bsha1.cpp  cdkeydecoder.cpp  checkrevision.cpp  decodekey.cpp  libinfo.cpp  main.cpp  nls.cpp  oldauth.cpp
